✨ Added overflow-scrolling prevention

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -14,6 +14,10 @@ body {
     -webkit-font-smoothing: antialiased !important;
     text-rendering: optimizeLegibility !important;
     overflow-x: hidden;
+
+    &.scroll-prevented {
+        overflow: hidden;
+    }
 }
 button {
     @include button-reset;
